[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://is_tetris.tres" type="TileSet" id=2]
[ext_resource path="res://tetris_theme.tres" type="Theme" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 51.0
margin_bottom = 14.0
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MenuScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.576471, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="MenuScreen"]
anchor_left = 0.501
anchor_right = 0.501
margin_left = -148.96
margin_top = 114.0
margin_right = 148.04
margin_bottom = 232.0
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="MenuScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -20.0
margin_right = 95.0
margin_bottom = 44.0
theme = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="MenuScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = 108.0
margin_right = 96.0
margin_bottom = 172.0
theme = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextShape" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="NextShape"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131053, 9, 0, 131055, 9, 0, 131056, 9, 0, 131059, 9, 0, 131060, 9, 0, 131061, 9, 0, 131063, 9, 0, 131064, 9, 0, 131066, 9, 0, 131067, 9, 0, 131068, 9, 0, 131070, 9, 0, 131071, 9, 0, 65536, 9, 0, 65538, 9, 0, 65540, 9, 0, 65541, 9, 0, 196589, 9, 0, 196591, 9, 0, 196596, 9, 0, 196599, 9, 0, 196603, 9, 0, 196606, 9, 0, 131072, 9, 0, 131074, 9, 0, 131076, 9, 0, 262125, 9, 0, 262127, 9, 0, 262128, 9, 0, 262132, 9, 0, 262135, 9, 0, 262136, 9, 0, 262139, 9, 0, 262142, 9, 0, 262143, 9, 0, 196610, 9, 0, 196612, 9, 0, 196613, 9, 0, 327661, 9, 0, 327664, 9, 0, 327668, 9, 0, 327671, 9, 0, 327675, 9, 0, 327678, 9, 0, 262144, 9, 0, 262146, 9, 0, 262149, 9, 0, 393197, 9, 0, 393199, 9, 0, 393200, 9, 0, 393204, 9, 0, 393207, 9, 0, 393208, 9, 0, 393211, 9, 0, 393214, 9, 0, 327680, 9, 0, 327682, 9, 0, 327684, 9, 0, 327685, 9, 0 )

[connection signal="pressed" from="MenuScreen/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuScreen/QuitButton" to="." method="_on_quit_button_pressed"]
